arquivos/registros/.bkp/Sismo_Pipeline.log.20240820092211

========================================================================
                       Iniciando do Pipeline                         
========================================================================

Argumentos recebidos:
  Catalogo: catalogo_jul.csv
  EVENTS: True
  TREATCATALOG: True
  PREDICT: False
  POSPROCESS: False
  MAPS: False
  REPORT: False
  TEST: True


 -------------- INICIANDO O TRATAMENTO -------------------- 
 Tratando catalogo_jul.csv...
 t0: ter 20 ago 2024 09:21:44 -03
  File "/home/ipt/projetos/ClassificadorSismologico/fonte/analise_dados/pre_processa.py", line 174
    ax.set_yticklabels(['{:,.0%}'.format(x) for x in ax.get_yticks()], fontsize=8)
                                                                                  ^
IndentationError: unindent does not match any outer indentation level
